project-platform-setup/jenkins-master-pod/deploy-master.yaml
# Deploy Jenkins  application with Liveness and Readiness Probe
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: default
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-admin 
      securityContext:
        fsGroup: 1000 
        runAsUser: 1000
      containers:
      - name: jenkins
        image: docker.io/jenkins/jenkins:lts-jdk11
        ports:
         - name: httpport
           containerPort: 8080
         - name: jnlpport
           containerPort: 50000
        volumeMounts:
           - mountPath: "/var/jenkins_home"
             name: jenkins-pvc
      volumes:
        - name: jenkins-pvc
          persistentVolumeClaim:
            claimName: jenkins-pvc
