project-platform-setup/jenkins-master-pod/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - host: jenkins.edshopper.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port: 
              number: 8080
  ingressClassName: nginx
